# selfmcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.claude/agents/: docs-architect.md
.github/workflows/: deploy.yml
data/: hiking_data.json  travel_reviews.json
docs/: architecture.md
docs/diagrams/: c4_component.puml  c4_container.puml  c4_context.puml
src/: server.py
src/helpers/: cache.py  s3_reader.py  secrets.py
src/selfmcp/: config.py  server.py
src/selfmcp/sources/: adaptive_rag.py  diary.py  teamview.py
src/tools/: hiking.py  personal_facts.py  photography.py  travel.py
