[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfmcp-server"
version = "0.1.0"
description = "An MCP server that integrates personal data sources and exposes them via MCP protocol"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
selfmcp = "selfmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/selfmcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
