[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfmcp-server"
version = "0.1.0"
description = "A personal diary MCP server — record entries to S3 and query them via a Bedrock agent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "boto3>=1.34",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
selfmcp = "selfmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/selfmcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
